--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -152,9 +152,10 @@ textarea::-webkit-scrollbar {
   fill: transparent;
 }
 
-/* Move tldraw style panel to bottom-right */
+/* Move tldraw style panel to bottom-left */
 .tldraw-container .tlui-layout__top__right {
-  justify-content: flex-end;
-  padding-bottom: 12px;
-  padding-right: 12px;
+  position: absolute;
+  bottom: 48px;
+  left: 12px;
+  height: auto;
 }
